--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/x-date-pickers": "^6.18.1",
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "nodemailer": "^6.9.7",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
