--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
+    "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.14.8",
     "@mui/x-date-pickers": "^6.18.1",
     "@react-oauth/google": "^0.11.1",
