--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.8",
+    "@fontsource/noto-sans-thai": "^5.0.8",
+    "@mui/icons-material": "^5.14.14",
     "@mui/lab": "^5.0.0-alpha.153",
-    "@mui/material": "^5.14.8",
+    "@mui/material": "^5.14.18",
     "@mui/x-date-pickers": "^6.18.1",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@react-oauth/google": "^0.11.1",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
+    "chart.js": "^2.9.4",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.10",
-    "next": "13.4.19",
-    "next-auth": "^4.23.1",
-    "nodemailer": "^6.9.7",
+    "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
+    "next": "^13.5.5",
+    "next-auth": "^4.23.2",
+    "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
+    "pdf-lib": "^1.17.1",
+    "pdfmake": "^0.2.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "reactjs-popup": "^2.0.6",
     "swiper": "^10.3.1",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
