--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,6 @@
     "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
     "pdf-lib": "^1.17.1",
-    "pdfmake": "^0.2.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -41,5 +40,8 @@
     "swiper": "^10.3.1",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "pdfmake": "^0.2.8"
   }
 }
