--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,21 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cheerio": "^1.0.0-rc.12",
     "convert-array-to-csv": "^2.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
     "dom-parser": "^0.1.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.0.1",
+    "pdfmake": "^0.2.8",
     "react-hook-form": "^7.47.0",
     "xml2js": "^0.6.2"
   }
