--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^3.6.1",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.0.1",
+    "pdf-merger-js": "^4.3.0",
     "pdfmake": "^0.2.8",
     "react-hook-form": "^7.47.0",
     "xml2js": "^0.6.2"
