--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "dom-parser": "^0.1.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "mailgen": "^2.0.28",
     "multer": "^1.4.5-lts.1",
