--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "hummus": "^1.0.116",
     "memory-streams": "^0.1.3",
-    "pdfmake": "^0.2.8"
+    "pdfmake": "^0.2.8",
+    "tailwindcss": "^3.3.6"
   }
 }
