--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
+    "express": "^4.18.2",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "next": "^13.5.6",
