--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.0.4",
     "hummus": "^1.0.116",
     "memory-streams": "^0.1.3",
     "pdfmake": "^0.2.8",
