--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,8 +45,11 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
+    "jest": "^29.7.0",
     "memory-streams": "^0.1.3",
     "pdfmake": "^0.2.8",
     "tailwindcss": "^3.3.6"
