--- a/server/package.json
+++ b/server/package.json
@@ -41,5 +41,8 @@
     "react-hook-form": "^7.47.0",
     "socket.io": "^4.7.2",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
