--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon index.js",
+	"run": "pm2 index.js"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +38,7 @@
     "nodemon": "^3.0.1",
     "pdf-merger-js": "^4.3.0",
     "pdfmake": "^0.2.8",
+    "pm2": "^5.3.0",
     "react-datepicker": "^4.24.0",
     "react-hook-form": "^7.47.0",
     "socket.io": "^4.7.2",
