--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - ./frontend:/usr/src/app
     working_dir: /usr/src/app
+    environment:
+      - NODE_ENV=development
     command: >
       bash -c "npm install && npm run dev"
     depends_on:
