--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@react-oauth/google": "^0.11.1",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "chart.js": "^2.9.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
