--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+	"test": "jest"
   },
   "dependencies": {
     "@canvasjs/react-charts": "^1.0.0",
@@ -40,6 +41,7 @@
     "react-router-dom": "^6.17.0",
     "reactjs-popup": "^2.0.6",
     "socket.io-client": "^4.7.2",
+    "supertest": "^6.3.4",
     "sweetalert2": "^11.10.1",
     "swiper": "^10.3.1",
     "xlsx": "^0.18.5",
