--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-	"run": "pm2 index.js"
+    "test": "jest",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +25,7 @@
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.28",
     "multer": "^1.4.5-lts.1",
